Fixed input field clear Fixed chat overflow (still need to program autoscroll to bottom)

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -29,7 +29,7 @@ header{
     font-size:16px;
     margin: auto;
     text-align:left;
-
+    overflow-y: scroll;
 }
 #userinput{
     width:300px;
